bin/testsuite/tests/compiler/src/errors/compiler708.swg
#global testerror "Err0401"
#test
{
	for(i: 2)
	{
		i = 1
	}
}